# Path-Smoothing-and-Trajectory-Control

./: README.md  package.xml  setup.py
config/: params.yaml
launch/: path_tracking.launch.py
nodes/: trajectory_tracker_node.py
path_tracking/: __init__.py  obstacle_avoidance.py  path_smoother.py  simulator.py  trajectory_controller.py  trajectory_generator.py
scripts/: standalone_simulation.py
tests/: test_path_tracking.py
